Revision history for Perl extension Catalyst::Plugin::Static::Simple

0.22    2009-08-21 18:14:59
        - Add tests for delivering empty files.
        - Fix those tests by depending on Catalyst-Runtime 5.80008.
        - Throw away compatibility code for older catalyst versions.
        - Fix docs to not include plugins in call to ->setup() (t0m)

0.21    2009-03-29 20:31:49
		- Documentation improvements (jester)
        - Change from NEXT to MRO::Compat - RT#40628, RT#44553 (ilmari)
        - Bump prereq to MIME::Types to 1.25 to correctly send files
          commonly used to graft support for transparent PNGs into
          MSIE6 - RT#41314 (Florian Ragwitz)

0.20    2007-09-24 10:00:00
        - Fixed issue where the static dir regex did not add a trailing
          slash so URLs such as /static1 were served as static when they
          should be handled by Catalyst. (Will Hawes)
        - Added text/html Content-Type to 404 responses. (Will Hawes)

0.19    2007-07-02 17:00:00
        - Fixed test failure on some systems in 11serve_static.t due to
          multiple MIME types defined for the extension '.pm'.

0.18    2007-07-01 00:15:00
        - Logging may now be enabled with the less confusing
          MyApp->config->{static}->{logging} = 1;

0.17    2007-05-11 11:00:00
        - Added serve_static_file, to serve a given file as static. (groditi)

0.16    2007-04-30 15:00:00
        - Allow all files in directories defined by the config option 'dirs'
          to be served as static even if the file matches ignore_dirs or
          ignore_extensions.
        - Fixed bug where 204 or 304 status codes would result in a 500 error
          under mod_perl.
        - Switch to Module::Install.

0.15    2006-12-08 22:30:00
        - Quote metacharacters used in $c->config->{dirs} (Vlad Dan Dascalescu)
        - store Mime::Types object in config hash instead of as classdata
        - cleanup code a bit

0.14    2006-03-24 11:15:00