@@ -14,7 +14,7 @@ ok( my $res = request('http://localhost/serve_static'), 'request ok' );
 is( $res->code, 200, '200 ok' );
 # .pm can be both application/x-pagemaker or text/x-perl, so only check for a slash
 like( $res->content_type, qr{/}, 'content-type ok' );
-like( $res->content, qr/serve_static/, 'content of serve_static ok' );
+like( $res->content, qr/package TestApp/, 'content of serve_static ok' );
 
 # test getting a non-existant file via serve_static_file
 ok( $res = request('http://localhost/serve_static_404'), 'request ok' );
