@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::Plugin::Static::Simple
 
+        - Move actions out of TestApp into a Root controller as
+          this is now deprecated.
+
 0.22    2009-08-21 18:14:59
         - Add tests for delivering empty files.
         - Fix those tests by depending on Catalyst-Runtime 5.80008.
